k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: java-app
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
