k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: java-app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: trial2ot5pk.jfrog.io/clase-docker/java-mariadb-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          #envFrom:
          #  - configMapRef:
          #      name: app-config
          #  - secretRef:
          #      name: app-secret
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: java-app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: java-app
spec:
  rules:
    - host: java-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080
